// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-badge value ! 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info">
      <span class="mg-c-badge__value">
        !
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value + 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info">
      <span class="mg-c-badge__value">
        +
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value ? 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info">
      <span class="mg-c-badge__value">
        ?
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 1 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 99+ 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info">
      <span class="mg-c-badge__value">
        99+
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 99? 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info">
      <span class="mg-c-badge__value">
        99?
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge value 100 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info">
      <span class="mg-c-badge__value">
        100
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant danger outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--danger">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant danger outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--danger mg-c-badge--outline">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant info outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant info outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--info mg-c-badge--outline">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant primary outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--primary">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant primary outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--outline mg-c-badge--primary">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant secondary outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--secondary">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant secondary outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--outline mg-c-badge--secondary">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant success outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--success">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant success outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--outline mg-c-badge--success">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant text-color outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--text-color">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant text-color outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--outline mg-c-badge--text-color">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant warning outiline false 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--warning">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;

exports[`mg-badge variant warning outiline true 1`] = `
<mg-badge>
  <mock:shadow-root>
    <span class="mg-c-badge mg-c-badge--outline mg-c-badge--warning">
      <span class="mg-c-badge__value">
        1
      </span>
      <span class="mg-u-visually-hidden">
        Batman
      </span>
    </span>
  </mock:shadow-root>
</mg-badge>
`;
